# tasknote_api

./: .flake8  .gitignore  pyproject.toml
apps/authentication/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/notes/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notes/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/common/: models.py  permissions.py
